@@ -3,6 +3,8 @@ J2J Component (http://wiki.jrudevels.org/J2J) Changelog:
 	[add] Roster import by sending subscribe-presence and settings for it in
 	jabber:iq:register form
 	[add] Command-line option -b for daemonize j2j
+	[add] Auto connect users where j2j is started
+	[add] Auto disconnect users where terminate signal is received
 
 	[chg] use hashlib instead of md5
 
